--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 body {
-  max-width: 650px;
+  max-width: 1000px;
   margin: 40px auto;
   margin-top: 16px;
   padding: 0 10px;
@@ -34,26 +34,6 @@ body {
   background-image: linear-gradient(60deg, #E21143, #FFB03A);
   -webkit-background-clip: text;
   color: transparent;
-}
-
-.profile {
-  display: block;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-  background-size: 200px 200px;
-  background-repeat: no-repeat;
-  width: 200px;
-  height: 200px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
-  background-image: url("./images/Portrait_of_Duke_Alessandro_de_Medici.png");
-  transition: 1s background-image;
-}
-
-.profile:hover {
-  background-image: url("./images/My_Actual_Picture.png");
 }
 
 hr {
@@ -165,4 +145,9 @@ li span.content {
 a, a:hover {
   color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  text-underline-position: auto;
+  text-decoration: underline;
 }
