--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,30 @@ a:hover {
   text-underline-position: auto;
   text-decoration: underline;
 }
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+}
+
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+}
+
+@media (max-width: 680px) {
+  /* For a screen < 540px, this CSS will be read */
+  .blog-entry {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  li span.content {
+    position: relative;
+    left: 0px;
+  }
+
+  li span.title {
+    position: relative;
+    left: 0px;
+  }
+}
