--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,6 @@ body {
   background-color: #E5E5E5;
 }
 
-.sunset-gradient-text {
-  background-image: linear-gradient(60deg, #E21143, #FFB03A);
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
 hr {
   display: block;
   unicode-bidi: isolate;
@@ -54,61 +48,6 @@ hr {
   display: flex;
   justify-content: space-evenly;
   padding-top: 2rem;
-}
-
-.social-links {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-#spin {
-  transition: transform 1.4s ease 0.1s;
-}
-
-#spin:hover {
-  transform: rotate(720deg);
-}
-
-.contributors {
-  background-image: linear-gradient(60deg, #43cea2 , #185a9d);
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
-.bton-yours {
-  width: 100%;
-  border-radius: 15px;
-  color: white;
-  background-color: black;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  font-weight: bold;
-  padding: 15px 25px;
-  margin-left: 0;
-  margin-right: 0;
-  text-align: center;
-  margin-bottom: 9px;
-}
-
-.bton-yours:hover {
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 30%, rgba(7,134,126,1) 40%, rgba(42,163,84,1) 56%, rgba(114,65,115,1) 74%, rgba(255,0,78,1) 87%, rgba(188,191,22,1) 100%);
-  background-size: 400% 400%;
-	animation: gradient 14s ease infinite;
-  color: white;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
 }
 
 .reference-list-orange li, .link-orange {
@@ -150,6 +89,10 @@ li span.content {
 a, a:hover {
   color: inherit;
   text-decoration: none;
+}
+
+img, video {
+  width: 100%;
 }
 
 a:hover {
